iekšējā saite, pāris paragrāfi

--- a/1majasdarbs.html
+++ b/1majasdarbs.html
@@ -10,22 +10,35 @@
     <header>Mans pirmais tautastērps</header>
     <main>
         <h1>Mans pirmais pašdarinātais tautastērps</h1>
-        <p>Kādu dienu mana meita paziņoja, ka viņa būšot tautumeita. Bet tautumeitai taču vajag tērpu!
-            vispirms cerēju tikt cauri ar miminālu darbu - uzšūt svārkus.
-        </p>
+        <p>Kādu dienu mana meita paziņoja, ka viņa būšot tautumeita. Bet tautumeitai taču vajag tērpu!</p>
+        <h2 id="pirmais_posms">Pirmais raunds jaunradei</h2>
+        <p>Klusībā cerēju tikt cauri ar minimālām ciešanām.
+        Šujmašīna stāvēja skapī neizpakota, bet vārās šūšanas prasmes 
+        noglabātas dziļi zemapziņā.<br> Bet kaut kas tomēr dvēseli urdīja. 
+        Tā nu es devos samedīt mantu strīpaino brunču radīšanas mokām.</p>
         <p>Svārkiem nepieciešamie matereāli:</p>
         <ul>
             <li>Tautisks audums (iegādāts Audums Pluss veikalā <a href="https://www.audums.lv/lv/web-shop/audumi/kokvilnas-un-lina-audumi/55" target="_blank">saite uz veikalu</a>)</li>
             <li>Gumija jostai</li>
             <li>Mežģīne</li>
         </ul>       
-        
+
         <img src="TT.jpg" alt="Pašdarināts tautas tērps" width="400">
+        <p>Kopumā izgatavoti tika sekojoši skuķīšsmukumi:</p>
+        <ol>
+            <li>Krekls;</li>
+            <li>Svārki;</li>
+            <li>Vainadziņš;</li>
+            <li>Josta;</li>
+        </ol>
+        
         <img src="Ruta_tt.jpg" alt="Meitēns tautastērpā" width="400">
+        <p>Jāņus bērnudārzā mana skaistā lēdija devās svinēt pilnā ekipējumā. 
+            Kopumā pasākums bija interesants, kas zin, varbūt kādreiz atkārtošu.
+             Vai arī nākošajā piegājienā ietērpšu tautu dēlu, tāds man arī rindā stāv. 
+            Un sākšu visu no gala. <a href="#pirmais_posms">Īsa pamācība tautastērpa radīšanā</a></p>
 
     </main>
-    <footer>
-
-    </footer>
+    <footer>Diezgan bezjēdzīga mājaslapa 2019</footer>
 </body>
 </html>
