--- a/1majasdarbs.html
+++ b/1majasdarbs.html
@@ -21,9 +21,18 @@
             <li>Tautisks audums (iegādāts Audums Pluss veikalā <a href="https://www.audums.lv/lv/web-shop/audumi/kokvilnas-un-lina-audumi/55" target="_blank">saite uz veikalu</a>)</li>
             <li>Gumija jostai</li>
             <li>Mežģīne</li>
-        </ul>       
+        </ul>   
+   
 
         <img src="TT.jpg" alt="Pašdarināts tautas tērps" width="400">
+        <pre>
+                Pasasēdi bites meita,
+                Ozoliņa zariņā,
+                Iekam sila sirsenits
+                Brūnus svārkus šūdinaja. 
+        </pre> 
+
+        
         <p>Kopumā izgatavoti tika sekojoši skuķīšsmukumi:</p>
         <ol>
             <li>Krekls;</li>
