--- a/1majasdarbs.html
+++ b/1majasdarbs.html
@@ -31,8 +31,12 @@
                 Iekam sila sirsenits
                 Brūnus svārkus šūdinaja. 
         </pre> 
-
-        
+        <p>Soli pa solim svārki uztapa. Skuķens sajūsmā, bet man āķis lūpā. ja jau, tad jau. <br>
+            Devos uz <a href="https://www.abakhan.lv/audumu-veikali">vietējo audumu veikalu</a> pēc balta lina un improvizēju. 
+        <br> Diegu galiem ejot pa gaisu, tapa krekls. Bet kas gan tā par tautumeitu bez vainadziņa. <br>
+        Zinot, ka dzīvās puķes mēdz braši noliekt galviņas siltā laika priekšā, ķēros pie mākslīgajām un līmes pistoles.
+        <br> Un, visbeidzot, iegādāju lenti jostai. 
+        </p>
         <p>Kopumā izgatavoti tika sekojoši skuķīšsmukumi:</p>
         <ol>
             <li>Krekls;</li>
@@ -42,9 +46,9 @@
         </ol>
         
         <img src="Ruta_tt.jpg" alt="Meitēns tautastērpā" width="400">
-        <p>Jāņus bērnudārzā mana skaistā lēdija devās svinēt pilnā ekipējumā. 
+        <p>Jāņus bērnudārzā mana skaistā lēdija devās svinēt pilnā ekipējumā.<br> 
             Kopumā pasākums bija interesants, kas zin, varbūt kādreiz atkārtošu.
-             Vai arī nākošajā piegājienā ietērpšu tautu dēlu, tāds man arī rindā stāv. 
+             Vai arī nākošajā piegājienā ietērpšu tautu dēlu, tāds man arī rindā stāv. <br>
             Un sākšu visu no gala. <a href="#pirmais_posms">Īsa pamācība tautastērpa radīšanā</a></p>
 
     </main>
